syntax = "proto3";
option java_multiple_files = true;
package com.feiyu.interfaces.idl;

import "messages.proto";
import "google/protobuf/empty.proto";


message MsgHandleReq {
  int64 to = 1;
  Msg msg = 2;
}

message MsgHandleRsp {
  int32 code = 1;
  GenericMsgHandleResult res = 2;
}

message GenericMsgHandleResult {
  int64 msgId = 1;
  int64 seq = 2;
}

service IMessageHandleService {
  rpc handle(MsgHandleReq) returns (MsgHandleRsp);
}

message RouteReq {
  int64 to = 1;
  Msg msg = 2;
}

message RouteRsp {
  int32 code = 1;
}

service IMessageRouteService {
  rpc route(RouteReq) returns (RouteRsp);
}

message SequenceReq {
  int64 uid = 1;
}

message SequenceRsp {
  int64 seq = 1;
}

service ISequenceService {
  rpc gen(SequenceReq) returns (SequenceRsp);
}

